增加百度统计

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>捷迅 - 让中小企业发光发亮，让优秀的企业更加杰出！</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="捷迅,中小企业,企业咨询,政策咨询解读,项目申报服务,财务咨询服务,体系认证服务,知识产权服务,产品认证服务" />
+<meta name="keywords" content="捷迅,台州,中小企业,企业咨询,政策咨询解读,项目申报服务,财务咨询服务,体系认证服务,知识产权服务,产品认证服务" />
 <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>	
 <!-- font files -->
@@ -22,7 +22,15 @@
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
 <!-- /css files -->
 <!-- js files -->
-
+<script>
+	var _hmt = _hmt || [];
+	(function() {
+	  var hm = document.createElement("script");
+	  hm.src = "https://hm.baidu.com/hm.js?40a1a1526da2223436d27fcf65cc3f50";
+	  var s = document.getElementsByTagName("script")[0]; 
+	  s.parentNode.insertBefore(hm, s);
+	})();
+	</script>	
 <!-- /js files -->	
 </head>
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
