--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>	
 <!-- font files -->
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css" media="all" rel="stylesheet" type="text/css">
 <link href='https://fonts.googleapis.com/css?family=Raleway:400,100,200,300,500,600,700,800,900' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
@@ -385,7 +384,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; 2021. All rights reserved.<a target="_blank" href="https://www.jiexun.work">捷迅企业咨询</a></p>
+                    <p>Copyright &copy; 2021. All rights reserved.<a target="_blank" href="https://www.jiexun.work">台州捷迅企业管理咨询有限公司</a></p>
                 </div>
             </div>
         </div>
