--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			<div class="container">
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-						<span class="sr-only">Toggle navigation</span>
+						<span class="sr-only"></span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
@@ -350,7 +350,7 @@
 		<div class="row">
 			<div class="contact-info slideanim col-md-4">
 				<h4 class="text-center slideanim">地址：</h4>
-				<p class="text-center slideanim">台州市椒江区<br>台州市椒江区开发大道507号<br>创业服务中心大楼七楼</p>
+				<p class="text-center slideanim">浙江省台州市椒江区<br>开发大道507号创业服务中心大楼七楼</p>
 			</div>
 			<div class="col-md-4">
 				<div class="contact-info slideanim">
