增加meta描述信息

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="捷迅,台州,中小企业,企业咨询,政策咨询解读,项目申报服务,财务咨询服务,体系认证服务,知识产权服务,产品认证服务" />
+<meta name="description" content="台州捷迅企业管理咨询有限公司，为企业提供可持续、可发展、可落地的一站式管理咨询服务。让中小企业发光发亮，让优秀的企业更加杰出！" />
 <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>	
 <!-- font files -->
